--- a/Poster/MainWindow.xaml
+++ b/Poster/MainWindow.xaml
@@ -112,7 +112,10 @@
 
             <Label Content="Styles" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0"/>
             <TextBox x:Name="TextBox_Styles" Height="23" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Column="1"/>
-            <Label Content="Genres" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2"/>
+
+          <ListView x:Name="StylesList" HorizontalAlignment="Stretch" Height="135" VerticalAlignment="Center" Width="133"/>
+
+          <Label Content="Genres" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2"/>
             <TextBox x:Name="TextBox_Genres" Height="23" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Column="3"/>
         </Grid>
 
