--- a/Poster/MainWindow.xaml
+++ b/Poster/MainWindow.xaml
@@ -101,7 +101,7 @@
         </Grid>
 
         <!--Styles-->
-        <Grid Grid.Column="0" Grid.Row="6">
+        <Grid x:Name="StylesGrid" Grid.Column="0" Grid.Row="6">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -111,9 +111,7 @@
 
 
             <Label Content="Styles" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0"/>
-            <!--<TextBox x:Name="TextBox_Styles" Height="23" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Column="1"/>-->
-
-            <ListView x:Name="StylesList" HorizontalAlignment="Stretch" Height="135" VerticalAlignment="Center" Width="133" Grid.Column="1"/>
+            <ListView x:Name="StylesList" HorizontalAlignment="Stretch" Height="135" VerticalAlignment="Center" Grid.Column="1"/>
 
             <Label Content="Genres" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="2"/>
             <TextBox x:Name="TextBox_Genres" Height="23" HorizontalAlignment="Stretch" VerticalContentAlignment="Center" Grid.Column="3"/>
